[package]
name = "pumpkin-codegen"
version = "0.1.0-dev+1.21.11"
edition = "2024"
rust-version = "1.89"

[dependencies]
indexmap = { version = "2.7", features = ["serde"] }
heck = "0.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json5 = "0.2"

rayon = "1.11.0"

proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

pumpkin-util = { path = "../pumpkin-util" }
pumpkin-nbt = { path = "../pumpkin-nbt" }

# [lints]
# all = { level = "deny", priority = -1 }
# nursery = { level = "deny", priority = -1 }
# pedantic = { level = "deny", priority = -1 }
# cargo = { level = "deny", priority = -1 }
