[package]
name = "pumpkin-core"
version.workspace = true
description = "Core library for the Pumpkin Minecraft server."
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Required to expose pumpkin plugin API
[lib]
doctest = false

[dependencies]
# pumpkin
arc-swap.workspace = true
rayon.workspace = true
num_cpus.workspace = true
pumpkin-util.workspace = true
pumpkin-nbt.workspace = true
pumpkin-config.workspace = true
pumpkin-inventory.workspace = true
pumpkin-world.workspace = true
pumpkin-data.workspace = true
pumpkin-protocol.workspace = true
pumpkin-macros.workspace = true

crossbeam.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "io-util",
    "time",
] }
thiserror.workspace = true
futures.workspace = true
notify.workspace = true

# config
serde.workspace = true
serde_json.workspace = true

bytes.workspace = true

rand.workspace = true

num-bigint.workspace = true

# Console line reading
rustyline.workspace = true

# encryption
rsa.workspace = true
pkcs8.workspace = true

# authentication
ureq = { workspace = true, features = ["json"] }

sha1.workspace = true

# velocity en
hmac.workspace = true
sha2.workspace = true

base64.workspace = true

# logging
tracing.workspace = true
tracing-subscriber.workspace = true

time = { workspace = true, features = ["parsing", "macros", "local-offset"] }

# plugins
libloading.workspace = true
rustc-hash.workspace = true

# Task handling
tokio-util = { workspace = true, features = ["rt"] }

# System details & Rustc version
sysinfo = "0.38"
rustc_version_runtime = "0.3"

flate2.workspace = true

wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmparser = { workspace = true }

ordered-float = "5.3.0"

postcard = { workspace = true }
tracing-serde-structured = { workspace = true }

bitflags = { workspace = true }

[dev-dependencies]
tempfile.workspace = true

[features]
tokio_taskdump = ["pumpkin-world/tokio_taskdump"]

[lints]
workspace = true
