[package]
name = "pumpkin-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build/build.rs"

[dependencies]
phf = { workspace = true, features = ["macros"] }
pumpkin-util.workspace = true
pumpkin-nbt.workspace = true

serde.workspace = true
crc-fast.workspace = true

[build-dependencies]
indexmap = { workspace = true, features = ["serde"] }

pumpkin-util.workspace = true
pumpkin-nbt.workspace = true

serde.workspace = true
serde_json.workspace = true

serde_json5.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

rayon.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "has_random_ticks"
harness = false
