[package]
name = "pumpkin-inventory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pumpkin-protocol.workspace = true
pumpkin-data.workspace = true

pumpkin-world.workspace = true
pumpkin-util.workspace = true

log.workspace = true
tokio.workspace = true
thiserror.workspace = true
crossbeam-utils.workspace = true

[lints]
workspace = true
