[package]
name = "pumpkin-nbt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
bytes.workspace = true

cesu8.workspace = true
flate2.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
