[package]
name = "pumpkin-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["query"]
serverbound = []
clientbound = []
query = []

[dependencies]
pumpkin-nbt.workspace = true
pumpkin-data = { workspace = true, features = ["packet", "item_id_remap"] }
pumpkin-macros.workspace = true
pumpkin-world.workspace = true
pumpkin-util.workspace = true

uuid.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
bytes.workspace = true

# encryption
aes.workspace = true
cfb8.workspace = true

# compression
async-compression = { workspace = true, features = ["tokio", "zlib"] }
flate2.workspace = true

take_mut.workspace = true
bitflags.workspace = true

[dev-dependencies]
# Validate correctness

[lints]
workspace = true
