[package]
name = "pumpkin-worldgen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pumpkin-data = { workspace = true, features = ["default"] }
pumpkin-util.workspace = true
pumpkin-world.workspace = true

rustc-hash.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }
serde.workspace = true

[[bench]]
name = "chunk"
harness = false

[[bench]]
name = "chunk_gen"
harness = false

[[bench]]
name = "noise_router"
harness = false
