[package]
name = "pumpkin"
version.workspace = true
description = "Empowering everyone to host fast and efficient Minecraft servers."
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[package.metadata.tauri-winres]
# FileDescription is handled as the Program name by Windows!
FileDescription = "Pumpkin"
OriginalFilename = "pumpkin.exe"
LegalCopyright = "Copyright © 2026 Aleksander Medvedev"

[dependencies]
pumpkin-core.workspace = true
pumpkin-config.workspace = true
pumpkin-data.workspace = true
pumpkin-util.workspace = true

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true

console-subscriber = { workspace = true, optional = true }

[features]
console-subscriber = ["dep:console-subscriber"]
tokio_taskdump = ["pumpkin-core/tokio_taskdump"]

[lints]
workspace = true
