[package]
name = "pumpkin-protocol-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

# IMPORTANT: disable lto when running
# cargo +nightly fuzz run decoder_java

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
tokio = { version = "1", features = ["full"] }
libfuzzer-sys = "0.4"

[dependencies.pumpkin-protocol]
path = ".."

[dependencies.pumpkin]
path = "../../pumpkin"

[dependencies.pumpkin-util]
path = "../../pumpkin-util"

[[bin]]
name = "decoder_java"
path = "fuzz_targets/decoder_java.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decoder_bedrock"
path = "fuzz_targets/decoder_bedrock.rs"
test = false
doc = false
bench = false

[[bin]]
name = "encoder_java"
path = "fuzz_targets/encoder_java.rs"
test = false
doc = false
bench = false

[[bin]]
name = "encoder_bedrock"
path = "fuzz_targets/encoder_bedrock.rs"
test = false
doc = false
bench = false

[[bin]]
name = "query_decoder"
path = "fuzz_targets/query_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rcon_decoder"
path = "fuzz_targets/rcon_decoder.rs"
test = false
doc = false
bench = false
